# stelarstrike

./: .env.example  .gitignore  Dockerfile  PRD.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: __init__.py  __main__.py  cli.py
assets/core/: agent.py  ai_client.py  config.py  discovery.py  orchestrator.py  target.py
assets/plugins/: __init__.py  base.py  csrf.py  file_upload.py  idor.py  jwt_vuln.py  nosqli.py  sqli.py  ssrf.py  xss.py
assets/skills/: sqli_skill.py
assets/utils/: logger.py
config/: config.example.yaml
schemas/: README.md  django_rest_framework.yaml  flask_postgresql.yaml  lab2_43_157.yaml  merdekabank_flask_postgresql.yaml  pentest_methodology.yaml
stelarstrike/: __init__.py  __main__.py  cli.py
stelarstrike/core/: __init__.py  agent.py  ai_client.py  config.py  discovery.py  orchestrator.py  report.py  schema_loader.py  target.py
stelarstrike/plugins/: __init__.py  base.py  csrf.py  file_upload.py  idor.py  jwt_vuln.py  nosqli.py  sqli.py  sqli_extract.py  ssrf.py  xss.py
stelarstrike/skills/: README.md
stelarstrike/tools/: tools-list.json
stelarstrike/utils/: __init__.py  http_client.py
tests/: test_agent.py  test_discovery.py  test_plugins.py  test_sqli.py  test_sqli_extract.py
